--- a/merge_sum_salary/code/create_salary_uid/uc_system_salary_uid.ipynb
+++ b/merge_sum_salary/code/create_salary_uid/uc_system_salary_uid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 163,
    "id": "d39934b3",
    "metadata": {},
    "outputs": [],
@@ -55,23 +55,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "id": "11c3bf60",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#uc_salary = pd.read_csv('/Users/apple/Desktop/research_fellow_documents/uc_salary_new.csv')\n",
-    "df = pd.read_stata('michigan906.dta')\n",
-    "df.rename(columns = {'salary':'regular_pay','salary_total':'gross_pay'}, inplace = True)\n",
-    "df = df.sort_values(['university','first_name','last_name','yr', 'title'])\n",
+    "os.chdir('/Users/apple/Dropbox/web_scrapping_UC/temp/')\n",
+    "uc_salary = pd.read_stata('uc.dta')\n",
+    "#df = pd.read_stata('michigan906.dta')\n",
+    "uc_salary.rename(columns = {'salary':'regular_pay','salary_total':'gross_pay'}, inplace = True)\n",
+    "uc_salary = uc_salary.sort_values(['university','first_name','last_name','yr', 'title'])\n",
     "\n",
-    "df = df.reset_index().rename(columns = {'index':'rid'})\n",
-    "df['uid'] = df.groupby(['university','first_name','last_name']).ngroup()"
+    "uc_salary['first_name_short'] = uc_salary['first_name'].str.split(' ').str[0].str.strip()\n",
+    "uc_salary.rename(columns = {'first_name':'first_name_raw','first_name_short':'first_name'}, inplace = True)\n",
+    "\n",
+    "#uc_salary = uc_salary.reset_index().rename(columns = {'index':'rid'})\n",
+    "#uc_salary['uid'] = uc_salary.groupby(['university','first_name','last_name']).ngroup()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "id": "9e98eea7",
    "metadata": {},
    "outputs": [],
@@ -89,6 +93,7 @@
     "group_vars = ['yr','yrid']\n",
     "\n",
     "uc_salary_b2 = uc_salary_b.merge(uc_salary_b[group_vars].drop_duplicates(group_vars).reset_index(), on = group_vars)\n",
+    "#uc_salary_b2 = uc_salary_b2.drop(columns = ['uid'])\n",
     "uc_salary_b2 = uc_salary_b2.rename(columns = {'index':'uid'})\n",
     "\n",
     "#same unique person must be affiliated with same set of departments, and have same \"series\" across years\n",
@@ -114,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "id": "d8e6dc87",
    "metadata": {},
    "outputs": [],
@@ -154,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "id": "a7d1fa5f",
    "metadata": {},
    "outputs": [],
@@ -178,6 +183,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "8f76eb4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uc_salary = uc_salary_new"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "03bf2ec8",
    "metadata": {},
@@ -187,12 +202,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 133,
    "id": "3b62ff45",
    "metadata": {},
    "outputs": [],
    "source": [
-    "uc_salary = pd.read_csv('/Users/apple/Desktop/research_fellow_documents/data_clean/uc_salary.csv')\n",
+    "#uc_salary = pd.read_csv('/Users/apple/Desktop/research_fellow_documents/data_clean/uc_salary.csv')\n",
     "dups = uc_salary[uc_salary.duplicated(['uid','yr'],keep=False)].sort_values(['uid','yr'])\n",
     "m1 = dups.groupby(['uid','yr']).agg({'cto_code': 'nunique', 'rank':'nunique'}).reset_index()\n",
     "\n",
@@ -216,20 +231,121 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4900087e",
+   "id": "239af2ef",
    "metadata": {},
    "source": [
-    "## Write files to local disk"
+    "## Find person i who share the same (first_name, last_name) but with missing middle initials with person j in university k and payment series r, then we assume i and j are the same person."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "28928873",
+   "execution_count": 331,
+   "id": "0f2812a7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('/Users/apple/Desktop/research_fellow_documents/data_clean/uc_salary.csv',index=False)"
+    "os.chdir('/Users/apple/Dropbox/web_scrapping_UC/merge_sum_salary/salary_data')\n",
+    "uc = pd.read_csv('uc_salary.csv')\n",
+    "uc = uc.reset_index().rename(columns = {'index':'rid'})\n",
+    "\n",
+    "uc['first_name_fp'] = uc['first_name'].str.split(' ').str[0].str.strip()\n",
+    "uc['first_name_sp'] = uc['first_name'].str.split(' ').str[-1].str.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 333,
+   "id": "8b02c596",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if there is no second part (middle initial) AND there is someone with the same \n",
+    "#first_name last_name, then assume they are the same individual.\n",
+    "uc.loc[uc['first_name_fp'] == uc['first_name_sp'], 'first_name_sp'] = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 334,
+   "id": "951f3c9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uc['missing_mi'] = (uc['first_name_sp'].isnull())\n",
+    "mis = uc.groupby(['first_name_fp','last_name','university','series']).agg({'missing_mi':'sum', 'uid': 'nunique'}).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 335,
+   "id": "d7959183",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mis2 = mis[(mis['missing_mi'] >= 1) & (mis['uid'] > 1)]\n",
+    "mis3 = mis2[['first_name_fp', 'last_name', 'university','series']]\n",
+    "uc = uc.drop(columns = ['missing_mi'])\n",
+    "uc2 = uc.merge(mis3, on = ['first_name_fp', 'last_name', 'university','series'])\n",
+    "uc2['new_uid'] = uc2.groupby(['first_name_fp', 'last_name', 'university','series']).ngroup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 338,
+   "id": "de8adea1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id2dept = uc2[uc2['department'].notnull()].groupby(['new_uid'])['department'].nunique().reset_index()\n",
+    "id2dept_unique = set(id2dept[id2dept['department'] == 1]['new_uid']) #uid with unique department affiliation\n",
+    "\n",
+    "match = uc2[(uc2['department'].notnull()) & (uc2['new_uid'].isin(id2dept_unique))].drop_duplicates(['new_uid','department'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 339,
+   "id": "9794e0ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "match2 = dict(zip(match['new_uid'],match['department']))\n",
+    "\n",
+    "uc2a = uc2[uc2['new_uid'].isin(id2dept_unique)]\n",
+    "uc2b = uc2[~uc2['new_uid'].isin(id2dept_unique)]\n",
+    "uc2a['department'] = uc2a['new_uid'].map(match2)\n",
+    "\n",
+    "uc3 = pd.concat([uc2a, uc2b], ignore_index = True)\n",
+    "#uc3 = uc3.drop(columns = ['first_name_fp','first_name_sp'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 340,
+   "id": "7577db73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uc4 = uc[~uc['rid'].isin(uc3.rid)]\n",
+    "uc4['new_uid'] = uc4['uid']\n",
+    "uc5 = pd.concat([uc3, uc4], ignore_index= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 345,
+   "id": "889447c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf = uc5[uc5['cip_code'].notnull()][['department','cip_code', 'field']].drop_duplicates()\n",
+    "\n",
+    "dept2code = dict(zip(tf.department, tf.cip_code))\n",
+    "dept2field = dict(zip(tf.department, tf.field))\n",
+    "uc5['cip_code'] = uc5['department'].map(dept2code)\n",
+    "uc5['field'] = uc5['department'].map(dept2field)\n",
+    "uc5 = uc5.drop(columns = ['first_name_fp', 'first_name_sp'])\n",
+    "uc5.to_csv('/Users/apple/Dropbox/web_scrapping_UC/merge_sum_salary/salary_data/uc_salary_updated.csv', index=False)"
    ]
   }
  ],
